<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright (C) 2014 Samsung Electronics Co., Ltd. All rights reserved.
    ~
    ~ Mobile Communication Division,
    ~ Digital Media and Communications Business, Samsung Electronics Co., Ltd.
    ~
    ~ This software and its documentation are confidential and proprietary
    ~ information of Samsung Electronics Co., Ltd.  No part of the software and
    ~ documents may be copied, reproduced, transmitted, translated, or reduced to
    ~ any electronic medium or machine-readable form without the prior written
    ~ consent of Samsung Electronics.
    ~
    ~ Samsung Electronics makes no representations with respect to the contents,
    ~ and assumes no responsibility for any errors that might appear in the
    ~ software and documents. This publication and the contents hereof are subject
    ~ to change without notice.
    -->
<resources>

    <string name="app_name">Step Diary</string>
    <string name="desc">Daily Step Count</string>
    <string name="title1">Total</string>
    <string name="unit1">Steps</string>

    <string name="move_before">Move Day Before</string>
    <string name="move_next">Move Day Next</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="connect_to_shealth">Connect to Samsung Health</string>

    <string name="percent_d_steps">%d steps</string>

    <string name="notice">Notice</string>
    <string name="msg_perm_acquired">All permissions should be acquired</string>
    <string name="msg_conn_not_available">Connection with Samsung Health is not available</string>
    <string name="msg_req_install">Please install Samsung Health</string>
    <string name="msg_req_upgrade">Please upgrade Samsung Health</string>
    <string name="msg_req_enable">Please enable Samsung Health</string>
    <string name="msg_req_agree">Please agree to Samsung Health policy</string>
    <string name="msg_req_available">Please make Samsung Health available</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="unit2">pts</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="google_fit">Go To Google FIt</string>
    <string name="samsung_health">Go To Samsung Health</string>
    <string name="add">Add</string>
    <string name="body_weight">Body Weight</string>
    <string name="body_height">Body Height</string>
    <string name="glucose">Blood Glucose</string>
</resources>