<!--
    ~ Copyright (C) 2014 Samsung Electronics Co., Ltd. All rights reserved.
    ~
    ~ Mobile Communication Division,
    ~ Digital Media and Communications Business, Samsung Electronics Co., Ltd.
    ~
    ~ This software and its documentation are confidential and proprietary
    ~ information of Samsung Electronics Co., Ltd.  No part of the software and
    ~ documents may be copied, reproduced, transmitted, translated, or reduced to
    ~ any electronic medium or machine-readable form without the prior written
    ~ consent of Samsung Electronics.
    ~
    ~ Samsung Electronics makes no representations with respect to the contents,
    ~ and assumes no responsibility for any errors that might appear in the
    ~ software and documents. This publication and the contents hereof are subject
    ~ to change without notice.
    -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.samsung.StepDiaryActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/move_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_moveback"
                android:contentDescription="@string/move_before" />

            <TextView
                android:id="@+id/date_view"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/move_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/move_next"
                android:src="@drawable/ic_movenext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="40dp"
                android:background="#7F7F7F" />

            <TextView
                android:id="@+id/text_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="15dp"
                android:text="@string/desc"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:baselineAligned="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/title1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/total_step_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#4A7EBB" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/binning_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>
</layout>
